--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,10 @@
 {
     "version": 2,
     "builds": [
-      {
-        "src": "app.js",
-        "use": "@vercel/node"
-      }
+      { "src": "./server.js", "use": "@vercel/node" }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "app.js" }
+      { "src": "/(.*)", "dest": "/server.js" }
     ]
   }
   
