mongo db uri update

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MONGO_URI = mongodb+srv://sadinenisrinivasarao6:10101997@cluster0.pft0c.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://sadinenisrinivasarao6:10101997@cluster0.pft0c.mongodb.net/FoodTruckdb?retryWrites=true&w=majority
+
 
