--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,22 @@
 {
     "version": 2,
     "builds": [
-      { "src": "./server.js", "use": "@vercel/node" }
+      {
+        "src": "server.js",
+        "use": "@vercel/node"
+      }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "/server.js" }
-    ]
+      {
+        "src": "/(.*)",
+        "dest": "/server.js"
+      }
+    ],
+    "functions": {
+      "server.js": {
+        "memory": 1024,
+        "maxDuration": 10
+      }
+    }
   }
   
